[CEP-21] Simulator harry integration